--- a/docs/go-gin-boilerplate/src/css/custom.css
+++ b/docs/go-gin-boilerplate/src/css/custom.css
@@ -6,6 +6,11 @@
 
 /* You can override the default Infima variables here. */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 /* #6AD7E5 */
 /* :root {
   --ifm-color-primary: #2e8555;
