--- a/web/template/controller.tmpl
+++ b/web/template/controller.tmpl
@@ -1,7 +1,7 @@
 package controllers
 
 import (
-	"go-gin-boilerplate/internal/services"
+	"github.com/sanjayheaven/ggb/internal/services"
 	"net/http"
 	"strconv"
 
