--- a/web/template/service.tmpl
+++ b/web/template/service.tmpl
@@ -1,7 +1,7 @@
 package services
 
 import (
-	"go-gin-boilerplate/internal/models"
+	"github.com/sanjayheaven/ggb/internal/models"
 )
 
 type {{.ModuleNameUpperFirst}}Service struct{}
